分布式锁bug写法